--- a/src/app_styles/game.scss
+++ b/src/app_styles/game.scss
@@ -10,7 +10,6 @@
     //transition: all .2s;
 
     .body {
-      background-color: #ddd;
       width: 1px; height: 1px;
     }
 
@@ -28,10 +27,17 @@
       display: block;
     }
 
+    &.P .body {
+      background-color: #bbb;
+    }
+
     &.ST .body {
       border-radius: 50%;
-      border: 4px solid #ccc;
+      border: 4px solid #999;
       box-shadow: 0 0 10px #000;
+      background-color: #aaa;
     }
+
+
   }
 }
