--- a/src/app_styles/game.scss
+++ b/src/app_styles/game.scss
@@ -11,6 +11,7 @@
 
     .body {
       width: 1px; height: 1px;
+      background-color: #bbb;
     }
 
     .label {
@@ -28,7 +29,7 @@
     }
 
     &.P .body {
-      background-color: #bbb;
+      background-color: #ccc;
     }
 
     &.ST .body {
