--- a/src/app_styles/game.scss
+++ b/src/app_styles/game.scss
@@ -31,6 +31,9 @@
     &.P .body {
       background-color: #ccc;
     }
+    &.F .body {
+      background-color: #ccab8a;
+    }
 
     &.ST .body {
       border-radius: 50%;
