--- a/src/app_styles/game.scss
+++ b/src/app_styles/game.scss
@@ -7,11 +7,18 @@
 
   .ship {
     position: absolute;
+    width: 1px; height: 1px;
+    //border: 50px solid rgba(255,0,0,.2);
     //transition: all .2s;
 
+    .block {
+      position: absolute;
+        background-color: #bbb;
+    }
+
     .body {
+      position: relative;
       width: 1px; height: 1px;
-      background-color: #bbb;
     }
 
     .label {
@@ -28,15 +35,14 @@
       display: block;
     }
 
-    &.P .body {
+    &.P .block {
       background-color: #ccc;
     }
-    &.F .body {
+    &.F .block {
       background-color: #ccab8a;
     }
 
-    &.ST .body {
-      border-radius: 50%;
+    &.ST .block {
       border: 4px solid #999;
       box-shadow: 0 0 10px #000;
       background-color: #aaa;
