--- a/src/app_styles/game.scss
+++ b/src/app_styles/game.scss
@@ -23,6 +23,10 @@
       height: 1px;
     }
 
+    img.body {
+      border: 1px solid red;
+    }
+
     .label {
       display: none;
       position: absolute;
@@ -36,6 +40,49 @@
     }
     &:hover .label {
       display: block;
+    }
+  }
+
+  .overlay {
+    position: absolute;
+    z-index: 200;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    > * {
+      position: absolute;
+    }
+  }
+
+  .tools-block {
+    padding: 10px;
+    position: absolute;
+    top: 0;
+    right: -300px;
+    width: 300px;
+    height: 100%;
+    overflow: auto;
+
+    .block-list {
+      .block {
+        position: relative;
+        display: block;
+        @include mat-card();
+        padding: 10px;
+        cursor: pointer;
+        z-index: 1;
+
+        .label {
+          float: right;
+        }
+
+        &.active {
+          @include mat-shadow-dark();
+          z-index: 10;
+        }
+      }
     }
   }
 }
